--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,13 +1,19 @@
 <footer class="footer">
+  <!-- Društvene mreže: vanjski linkovi u novom tabu + sigurnosni rel -->
   <div class="social-icons">
-    <a href="https://www.facebook.com/share/1BqLdN1csb/" target="_blank" aria-label="Facebook">
-      <i class="fab fa-facebook-f"></i>
+    <a href="https://www.facebook.com/share/1BqLdN1csb/"
+       target="_blank" rel="noopener noreferrer"
+       aria-label="Facebook">
+      <i class="fab fa-facebook-f" aria-hidden="true"></i>
     </a>
-    <a href="https://www.instagram.com/centarsensus/?igsh=MTV6emU1ZjRlb2d0cw%3D%3D#" target="_blank" aria-label="Instagram">
-      <i class="fab fa-instagram"></i>
+    <a href="https://www.instagram.com/centarsensus/?igsh=MTV6emU1ZjRlb2d0cw%3D%3D#"
+       target="_blank" rel="noopener noreferrer"
+       aria-label="Instagram">
+      <i class="fab fa-instagram" aria-hidden="true"></i>
     </a>
   </div>
 
+  <!-- Interni linkovi (Angular Router) -->
   <div class="footer-links">
     <a routerLink="/kontakt">Kontakt</a>
   </div>
