--- a/src/app/pages/galerija/galerija.component.html
+++ b/src/app/pages/galerija/galerija.component.html
@@ -1,4 +1,4 @@
-<h1 class="gallery-header">📸 Galerija</h1>
+<h1 class="gallery-header">🖼️ Galerija</h1>
 
 <!-- Admin dio -->
 <div *ngIf="isAdmin" class="upload-container">
